<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>ca.debugging</groupId>
  <artifactId>thucydides-eclipse-problem</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  
  <properties>
	    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>1.6</maven.compiler.source>
		<maven.compiler.target>1.6</maven.compiler.target>		
        <thucydides.version>0.9.204-SNAPSHOT</thucydides.version>
        <webdriver.driver>firefox</webdriver.driver>
        <spring.version>3.2.0.RELEASE</spring.version>
        <springsecurity.version>3.1.3.RELEASE</springsecurity.version>
    </properties>
  
  <dependencies>
    	<dependency>
	    	<groupId>org.hamcrest</groupId>
	    	<artifactId>hamcrest-all</artifactId>
	    	<version>1.3</version>
		</dependency>
	    <dependency>
	    	<groupId>org.mockito</groupId>
	    	<artifactId>mockito-all</artifactId>
	    	<version>1.9.5</version>
		</dependency>
    	<!-- <dependency>
		    <groupId>br.eti.kinoshita</groupId>
		    <artifactId>testlink-java-api</artifactId>
		    <version>1.9.6-1</version>
		    <exclusions>
            	<exclusion>
            		<artifactId>slf4j-api</artifactId>
            		<groupId>org.slf4j</groupId>
            	</exclusion>
            </exclusions>
		</dependency> -->
    	 <!-- SPRING -->
    	<!--<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context</artifactId>
			<version>${spring.version}</version>
			<exclusions>
				Exclude Commons Logging in favor of SLF4j
				<exclusion>
					<groupId>commons-logging</groupId>
					<artifactId>commons-logging</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context-support</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.javassist</groupId>
			<artifactId>javassist</artifactId>			
			<version>3.17.1-GA</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-test</artifactId>
			<version>${spring.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-core</artifactId>
			<version>${springsecurity.version}</version>
		</dependency>
		
		
		<dependency>
			<groupId>com.eyereturn</groupId>
			<artifactId>eyereports-security-api</artifactId>
			<version>1.0.2-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.eyereturn</groupId>
			<artifactId>eyereports-security</artifactId>
			<version>1.0.2-SNAPSHOT</version>
			<exclusions>
				<exclusion>
					<groupId>ch.qos.logback</groupId>
					<artifactId>logback-core</artifactId>
				</exclusion> 
				<exclusion>
					<groupId>ch.qos.logback</groupId>
					<artifactId>logback-classic</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.slf4j</groupId>
					<artifactId>log4j-over-slf4j</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.hibernate</groupId>
					<artifactId>hibernate-core</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.hibernate</groupId>
					<artifactId>hibernate-validator</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		
    	<dependency>
	    	<groupId>com.eyereturn</groupId>
			<artifactId>eyereturn-operations</artifactId>
			<version>2.0.0-SNAPSHOT</version>
		</dependency> -->
    	<dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>1.7.2</version>
        </dependency>
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-java</artifactId>
            <version>2.33.0</version>
        </dependency>
        <dependency>
            <groupId>net.thucydides</groupId>
            <artifactId>thucydides-core</artifactId>
            <version>${thucydides.version}</version>
        </dependency>
        <dependency>
            <groupId>net.thucydides</groupId>
            <artifactId>thucydides-junit</artifactId>
            <version>${thucydides.version}</version>
            <scope>test</scope>
        </dependency>
        <!-- <dependency>
            <groupId>net.thucydides.easyb</groupId>
            <artifactId>thucydides-easyb-plugin</artifactId>
            <version>${thucydides.version}</version>
            <scope>test</scope>
        </dependency> -->
        <dependency>
            <groupId>org.codehaus.groovy</groupId>
            <artifactId>groovy-all</artifactId>
            <version>1.8.5</version>
        </dependency>
        <dependency>
            <groupId>org.easytesting</groupId>
            <artifactId>fest-assert</artifactId>
            <version>1.4</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.8.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.googlecode.lambdaj</groupId>
            <artifactId>lambdaj</artifactId>
            <version>2.3.1</version>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.15</version>
                <configuration>
                    <skip>true</skip>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>2.15</version>
                <configuration>
               		<runOrder>failedfirst</runOrder>
                    <includes>
                        <include>**/*Test.java</include>
                        <include>**/Test*.java</include>
                        <include>**/When*.java</include>
                    </includes>
                    <argLine>-Xmx1024m -XX:MaxPermSize=512m</argLine>
                    <systemPropertyVariables>
                        <webdriver.driver>${webdriver.driver}</webdriver.driver>
                        <thucydides.issue.tracker.url>https://fogbugz.eyereturn.com/default.asp?{0}</thucydides.issue.tracker.url>
                        <thucydides.browser.width>1024</thucydides.browser.width>
                        <thucydides.browser.height>768</thucydides.browser.height>
                    </systemPropertyVariables>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>integration-test</goal>
                            <goal>verify</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>
                <configuration>
                    <source>1.6</source>
                    <target>1.6</target>
                </configuration>
            </plugin>
            <!-- <plugin>
                <groupId>org.easyb</groupId>
                <artifactId>maven-easyb-plugin</artifactId>
                <version>1.4</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>test</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <storyType>html</storyType>
                    <storyReport>target/easyb/easyb.html</storyReport>
                    <easybTestDirectory>src/test/stories</easybTestDirectory>
                    <jvmArguments>-Xmx512m -Dwebdriver.driver=${webdriver.driver}</jvmArguments>
                </configuration>
            </plugin> -->
            <plugin>
                <groupId>net.thucydides.maven.plugins</groupId>
                <artifactId>maven-thucydides-plugin</artifactId>
                <version>${thucydides.version}</version>
                <executions>
                    <execution>
                        <id>thucydides-reports</id>
                        <phase>post-integration-test</phase>
                        <goals>
                            <goal>aggregate</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>maven2</id>
            <activation>
                <file>
                    <missing>${basedir}</missing>
                </file>
            </activation>
            <reporting>
                <plugins>
                    <plugin>
                        <groupId>net.thucydides.maven.plugins</groupId>
                        <artifactId>maven-thucydides-plugin</artifactId>
                        <version>${thucydides.version}</version>
                    </plugin>
                </plugins>
            </reporting>
        </profile>
        <profile>
            <id>maven3</id>
            <activation>
                <file>
                    <exists>${basedir}</exists>
                </file>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-site-plugin</artifactId>
                        <version>3.0-beta-3</version>
                        <configuration>
                            <reportPlugins>
                                <plugin>
                                    <groupId>net.thucydides.maven.plugins</groupId>
                                    <artifactId>maven-thucydides-plugin</artifactId>
                                    <version>${thucydides.version}</version>
                                </plugin>
                            </reportPlugins>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles> 
</project>